--- a/docs/_includes/widgets/primary_content/funnel_boxes_1.html
+++ b/docs/_includes/widgets/primary_content/funnel_boxes_1.html
@@ -5,13 +5,14 @@
                 <img alt="[alt text]" height="125px" src="imgres-1.jpg" width="290px" />
             </a>
         </div>
-        <h3>
-                                            <a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">[headline] »</a>
-                                    </h3>
+        <h3><a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">[headline] »</a></h3>
         <div class="copy">Lebowski ipsum yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary. Lectus quis elit blandit fringilla a ut turpis praesent felis. Jeez. I miss vinyl. Ligula, malesuada suscipit malesuada non, ultrices non urna sed orci ipsum, placerat id. We wanted to talk about little Larry. May we come in? Condimentum rutrum, rhoncus ac lorem aliquam placerat.</div>
         <ul class="linkList">
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drinks... »</a>
-            </li>
+            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... buying people drinks... »</a></li>
+            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drinks... »</a></li>
+            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drunk people drinking... »</a></li>
+            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drunk... »</a></li>
+            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking peoples drinks... »</a></li>
         </ul>
     </div>
 </div>
