--- a/src/stylesheets/widgets/news-events-feed.scss
+++ b/src/stylesheets/widgets/news-events-feed.scss
@@ -170,13 +170,13 @@ $tab-content-border-color: #cdccc7;
   float: none;
   width: 100%;
   height: 100%;
-  min-height: 130px;
   position: relative;
   padding: 15px 0px 15px 0px;
   @include bp(l) {
     border: none;
     border-right: 1px solid #dfd3bc;
     width: 28.9%;
+    min-height: 130px;
     
     padding: 0;
     padding-right: 2%;
@@ -198,6 +198,7 @@ $tab-content-border-color: #cdccc7;
   margin: 0;
   padding: 15px 0px 15px 0px;
   position: relative;
+  min-height: auto;
 
   &.story3 {
     border: none;
