--- a/src/stylesheets/themes/copa.scss
+++ b/src/stylesheets/themes/copa.scss
@@ -16,6 +16,10 @@
     background-color: #36232f;
   }
 
+  .rightColumn .styleTwo a {
+    color: #ffffff;
+  }
+
   .nameBarButtons li a {
     color: $copa-primary;
   }
