--- a/src/stylesheets/themes/copa__dance.scss
+++ b/src/stylesheets/themes/copa__dance.scss
@@ -16,6 +16,10 @@
     background-color: #003832;
   }
 
+  .rightColumn .styleTwo a {
+    color: #ffffff;
+  }
+
   .nameBarButtons li a {
     color: $dance-primary;
   }
