--- a/src/stylesheets/themes/copa__theatre.scss
+++ b/src/stylesheets/themes/copa__theatre.scss
@@ -16,6 +16,10 @@
     background-color: #001226;
   }
 
+  .rightColumn .styleTwo a {
+    color: #ffffff;
+  }
+
   .nameBarButtons li a {
     color: $theatre-primary;
   }
