--- a/src/stylesheets/themes/scst.scss
+++ b/src/stylesheets/themes/scst.scss
@@ -21,7 +21,7 @@
         color: $white;
       }
       a {
-        color: $scst-tertiary;
+        color: #ffffff;
         text-decoration: underline;
       }
     }
