--- a/src/stylesheets/themes/wilkinson.scss
+++ b/src/stylesheets/themes/wilkinson.scss
@@ -16,6 +16,10 @@
     background-color: $theme-blue;
   }
 
+  .rightColumn .styleTwo a {
+    color: #ffffff;
+  }
+
   .nameBarButtons li a {
     color: $wilkinson-primary;
   }
