--- a/src/stylesheets/base/callout.scss
+++ b/src/stylesheets/base/callout.scss
@@ -1,7 +1,7 @@
 .callout {
-	background-color: $cu-light-grey;
-  // border-right: 1px solid #c0c0b8;
-  // border-bottom: 1px solid #c0c0b8;
+background-color: $cu-light-grey;
+  border-right: 1px solid #c0c0b8;
+  border-bottom: 1px solid #c0c0b8;
   vertical-align: top;
   padding: 20px;
   margin: 10px 10px 25px 10px;
