--- a/src/stylesheets/base/left-nav-sub-content.scss
+++ b/src/stylesheets/base/left-nav-sub-content.scss
@@ -17,6 +17,20 @@
     padding-right: 20px;
   }
 	.callout {
+		background-color: #e2e1dc;
+		border-right: 1px solid #c0c0b8;
+		border-bottom: 1px solid #c0c0b8;
+		vertical-align: top;
+		
+		.border {
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			height: 7px;
+			background-color: #d2d1cd;
+		}
+
 		// padding: 10px 19px 10px 19px;
 		// margin: 0 0 20px 0;
 		// position: relative;
