Split up personell widget into seperate styles from the searchResults stuff.

--- a/docs/_includes/widgets/primary_content/personnel_region_2.html
+++ b/docs/_includes/widgets/primary_content/personnel_region_2.html
@@ -1,5 +1,5 @@
-<div class="personnel-widget searchResults personnel-listing">
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+<div class="personnel-widget personnel-listing">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Squirrel Norris" class="image" itemprop="image" src="images.jpg" style="width:120px;" />
         <div class="name" itemprop="name">Squirrel C Norris</div>
         <div class="title" itemprop="title">Mr.</div>
@@ -12,7 +12,7 @@
                                         </a>
         </div>
     </div>
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Hannibal Squirrel" class="image" itemprop="image" src="images-1.jpg" style="width:120px;" />
         <div class="name" itemprop="name">Hannibal L Squirrel</div>
         <div class="title" itemprop="title">Dr.</div>
