--- a/docs/_includes/widgets/primary_content/personnel_region_1.html
+++ b/docs/_includes/widgets/primary_content/personnel_region_1.html
@@ -1,5 +1,5 @@
-<div class="searchResults personnel-listing personnel-listing-widget">
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+<div class="personnel-listing personnel-listing-widget">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Benjamin 'Hawkeye' Pierce" class="image" itemprop="image" src="{% asset_path placeholder/user_2.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Benjamin 'Hawkeye' Pierce</div>
         <div class="title" itemprop="title">Captain, Chief Surgeon</div>
@@ -13,8 +13,8 @@
         </div>
     </div>
 </div>
-<div class="searchResults personnel-listing personnel-listing-widget">
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+<div class="personnel-listing personnel-listing-widget">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Margaret 'Hot Lips' Houlihan" class="image" itemprop="image" src="{% asset_path placeholder/user_1.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Margaret 'Hot Lips' Houlihan</div>
         <div class="title" itemprop="title">Major, Head Nurse</div>
@@ -28,8 +28,8 @@
         </div>
     </div>
 </div>
-<div class="searchResults personnel-listing personnel-listing-widget">
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+<div class="personnel-listing personnel-listing-widget">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="First Name Last Name" class="image" itemprop="image" src="{% asset_path placeholder/user_3.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">First Name Last Name</div>
         <div class="title" itemprop="title">Title of Personnel</div>
@@ -39,8 +39,8 @@
         <div class="bio">Here is a description of the personnel in question. </div>
     </div>
 </div>
-<div class="searchResults personnel-listing personnel-listing-widget">
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+<div class="personnel-listing personnel-listing-widget">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Sherman Potter" class="image" itemprop="image" src="{% asset_path placeholder/user_4.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Sherman Potter</div>
         <div class="title" itemprop="title">Colonel, Commanding Officer </div>
@@ -54,8 +54,8 @@
         </div>
     </div>
 </div>
-<div class="searchResults personnel-listing personnel-listing-widget">
-    <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
+<div class="personnel-listing personnel-listing-widget">
+    <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Walter 'Radar' O’Reilly" class="image" itemprop="image" src="{% asset_path placeholder/user_5.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Walter 'Radar' O’Reilly</div>
         <div class="title" itemprop="title">Corporal, Company Clerk</div>
