--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -14,8 +14,6 @@
 @import "objects_2/navigation";
 @import "objects_2/footer";
 
-
-
 // Old Objects being deleted 1 by 1
 @import "objects/accordion";
 @import "objects/big-masthead";
@@ -66,7 +64,7 @@
 @import "layout/primary-content";
 @import "layout/right-column";
 
-// Modules
+// // Modules
 @import "widgets/carousel";
 @import "widgets/flickr-picasa-links";
 @import "widgets/funnel-region";
