Desktop version of footer with new system.

--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -20,7 +20,7 @@ $red:         #a82439;
 $blue:        #477dca;
 $dark-gray:   #353430;
 $medium-gray: #9B9B9B;
-$light-gray:  #ECEBE5; // Pending
+$light-gray:  #EAEAEA;
 
 
 // Font Colors
