Menu is almost ready with the responsiveness.

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,11 +3,10 @@
     <a href="javascript:void(0)" class="logo">
       {% image 'logo.png' alt="Chapman University Logo Image"%}
     </a>
-    <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
-        <span class="navigation-ribbon-edge"></span>
+    <a class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link more first"><a href="javascript:void(0)">ABOUT</a>
+        <li class="nav-link more first"><a href="#">ABOUT</a>
             <ul class="submenu">
                 <li><a class="icon icon-location" href="javascript:void(0)">Maps and Directions</a></li>
                 <li><a class="icon icon-california" href="javascript:void(0)">Visit Chapman</a></li>
@@ -42,7 +41,7 @@
         <li class="nav-link"><a href="javascript:void(0)">ARTS</a></li>
         <li class="nav-link"><a href="javascript:void(0)">ATHLETICS</a></li>
         <li class="nav-link"><a href="javascript:void(0)">RESEARCH</a></li>
-        <li class="nav-link more"><a href="javascript:void(0)">SUPPORT</a>
+        <li class="nav-link more last"><a href="javascript:void(0)">SUPPORT</a>
             <ul class="submenu">
                 <li><a class="icon icon-envelop" href="javascript:void(0)">Contact Development</a></li>
                 <li><a class="icon icon-hand" href="javascript:void(0)">Get Involved</a></li>
