--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path master.css %}">
 
 
-<!--     <script src="//use.typekit.net/eyn5jyy.js" type="text/javascript"></script>
+    <script src="//use.typekit.net/eyn5jyy.js" type="text/javascript"></script>
     <script type="text/javascript">try {Typekit.load();} catch (e) {}</script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="## site.baseurl #### asset_path master.js ##"></script> -->
+    <script type="text/javascript" src="{{ site.baseurl }}{% asset_path master.js %}"></script>
 
     <!--[if lt IE 7 ]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
