--- a/src/stylesheets/widgets/masthead.scss
+++ b/src/stylesheets/widgets/masthead.scss
@@ -166,6 +166,7 @@
     font-size: 13px;
     margin: 10px 0 0 0;
     line-height: 1.5;
+    word-break: normal;
   }
   .button {
     opacity: 0;
