Added bullets back to the callouts and region lists.

--- a/docs/_includes/widgets/left_column/callout_1.html
+++ b/docs/_includes/widgets/left_column/callout_1.html
@@ -2,6 +2,12 @@
 	<div class="border"> </div>
     <h2>10+ Years of Rails with DHH</h2>
     <div class="editableContent"><span>Our guest this week is David Heinemeier Hansson, aka DHH. He joins us to talk through the past, present, and future of Ruby on Rails &#8212; the most beloved web application framework in the Ruby community.</span>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 1</li>
+      <li>Item 1</li>
+      <li>Item 1</li>
+    </ul>
     </div>
     <ul class="buttonLinks">
         <li><a href="http://thechangelog.com/145/">Listen Here!</a>
