--- a/docs/_includes/widgets/primary_content/regions_1.html
+++ b/docs/_includes/widgets/primary_content/regions_1.html
@@ -4,6 +4,13 @@
         <div class="content">
             <p>
                 <img alt="img" class="featureImage" height="150" src="ss07.jpg" width="200" /> Lebowski ipsum yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary. Lectus quis elit blandit fringilla a ut turpis praesent felis. Jeez. I miss vinyl. Ligula, malesuada suscipit malesuada non, ultrices non urna sed orci ipsum, placerat id. We wanted to talk about little Larry. May we come in? Condimentum rutrum, rhoncus ac lorem aliquam placerat. Just me and Charlie, man, eyeball to eyeball. Posuere neque, at dignissim magna ullamcorper in aliquam sagittis massa. This Chinaman is not the issue! Ac tortor ultrices faucibus curabitur eu. Walter, this isn't a First Amendment thing. Mi sapien, ut ultricies ipsum morbi eget. Ja, vee could really do it, Lebowski. Risus nulla nullam vel nisi enim, vel auctor ante morbi id urna vel. You don't go out and make a living dressed like that in the middle of a weekday. Felis lacinia placerat vestibulum turpis nulla, viverra nec volutpat ac, ornare id lectus cras. When will you find these guys? I mean, do you have any promising leads? Pharetra faucibus tristique nullam non accumsan justo nulla facilisi integer interdum elementum. A way out west there was a fella, fella I want to tell you about, fella by the name of Jeff Lebowski. At least, that was the handle his lovin' parents gave him, but he never had much use for it himself. This Lebowski, he called himself the Dude. Now, Dude, that's a name no one would self-apply where I come from. But then, there was a lot about the Dude that didn't make a whole lot of sense to me. And a lot about where he lived, likewise. But then again, maybe that's why I found the place s'durned innarestin'. Nulla, nec eleifend nisl euismod ac maecenas vitae eros velit, eu suscipit.
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                    <li>Item 4</li>
+                    <li>Item 5</li>
+                </ul>
             </p>
             <ul class="linkList">
                 <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">link »</a>
