--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -85,6 +85,7 @@
 @import "widgets/spotlight-region";
 @import "widgets/three-box-callout";
 @import "widgets/news-events-feed";
+@import "widgets/single_column/message-with-photo";
 
 // Themes
 @import "themes/wilkinson";
