changed message widget file names to messaging_2_column

--- a/docs/_includes/widgets/single_column/messaging_2_column.html
+++ b/docs/_includes/widgets/single_column/messaging_2_column.html
@@ -1,4 +1,4 @@
-<div class= "message-with-photo-widget">
+<div class= "messaging-2-column ">
 	<div class= "wrap">
 		<div class= "column image">
 			<img class= "image" src="http://static.fjcdn.com/pictures/A+funny+squirrel+this+cute+squirrel+is+so+funny_9b8398_4599729.jpg"/>
