--- a/docs/_includes/widgets/single_column/messaging_2_column.html
+++ b/docs/_includes/widgets/single_column/messaging_2_column.html
@@ -9,7 +9,7 @@
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit<br><br>
 					nunc. Curabitur tempus posuere aliquam. Etiam euismod ullamcorper quam ac consequat. Duis varius varius leo non elementum. Duis eget lectus tincidunt elit fermentum dictum vitae vel metus. Proin nec magna fermentum, tincidunt velit id, fringilla lorem. Mauris in dolor risus. Morbi dapibus magna sed mi feugiat, sed tristique sem
 				</p>
-			<div class= "button"><a class= "button red">This is a button</a></div>
+			<div class= "actions"><a class= "button red">This is a button</a></div>
 		</div>
 	</div>
 </div>
