--- a/src/stylesheets/widgets/single_column/messaging-2-column.scss
+++ b/src/stylesheets/widgets/single_column/messaging-2-column.scss
@@ -1,31 +1,58 @@
 .messaging-2-column {
 	padding: 20px 0;
-	margin-top: 20px;
 	background: #ecebe5;
 	.wrap {
 		@include outer-container(1128px);
-
-		.column.image {
-			@include span-columns(7);
-		}
-		.column.message {
-			@include span-columns(5);
-			padding-left: 20px;
-		}
+		padding: 0 30px;
 	}
+
+	.column.image {
+		@include span-columns(7);
+	}
+
+	.column.message {
+		@include span-columns(5);
+		padding-left: 20px;
+	}
+
 	img {
 		width: 100%;
 		max-height: 374px;
 	}
+
 	h1.title {
 		margin: 0;
 		font-weight: normal;
 	}
+
 	p.message-text {
-		margin: 30px 0;
+		margin: 20px 0 30px;
 	}
+
 	.button.red {
+		text-align: center;
 		padding: 15px 25px;
-		font-size: 14px;
+		margin: 0;
+		font-size: 16px;
+		font-weight: normal;
+	}
+	
+	@media only screen and (max-width: 768px) {
+		.column.image,
+		.column.message {
+			@include span-columns(12);
+			padding: 0;
+		}
+
+		h1.title {
+			line-height: 1;
+			margin-top: 30px;
+		}
+	}
+
+	@media only screen and (max-width: 500px) {
+		.actions {
+			text-align: center;
+		}
 	}
 }
