Updated styles for message widget

--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bourbon/bourbon";
+@import "base/grid-settings";
 @import "neat/neat";
 
 @import "chapman-web-components/_assets/stylesheets/shared/_colors.scss";
