--- a/src/stylesheets/widgets/single_column/messaging-2-column.scss
+++ b/src/stylesheets/widgets/single_column/messaging-2-column.scss
@@ -1,18 +1,19 @@
 .messaging-2-column {
-	padding: 20px 0;
-	background: #ecebe5;
-	.wrap {
-		@include outer-container(1128px);
-		padding: 0 30px;
-	}
+	
+	@include outer-container();
 
-	.column.image {
-		@include span-columns(7);
-	}
-
-	.column.message {
+	.column {
+		&:first-of-type {
+			@include span-columns(7);
+		}
 		@include span-columns(5);
-		padding-left: 20px;
+
+		@include media($medium-screen-up) {
+			&:first-of-type {
+				@include span-columns(4);
+			}
+			@include span-columns(4);
+		}
 	}
 
 	img {
@@ -23,6 +24,12 @@
 	h1.title {
 		margin: 0;
 		font-weight: normal;
+	}
+
+	h4.category {
+		margin-top: 0;
+		text-transform: uppercase;
+		color: #62605a;
 	}
 
 	p.message-text {
@@ -36,23 +43,13 @@
 		font-size: 16px;
 		font-weight: normal;
 	}
-	
-	@media only screen and (max-width: 768px) {
-		.column.image,
-		.column.message {
-			@include span-columns(12);
-			padding: 0;
-		}
 
-		h1.title {
-			line-height: 1;
-			margin-top: 30px;
-		}
-	}
-
-	@media only screen and (max-width: 500px) {
+	@media only screen and (max-width: 600px) {
 		.actions {
 			text-align: center;
+		}
+		h4.category {
+			margin-top: 30px;
 		}
 	}
 }
