added styles for cta-widget

--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -87,6 +87,8 @@
 @import "widgets/three-box-callout";
 @import "widgets/news-events-feed";
 @import "widgets/single_column/messaging-2-column";
+@import "widgets/single_column/cta-3-column";
+
 
 // Themes
 @import "themes/wilkinson";
