--- a/docs/_includes/widgets/single_column/cta_3_column.html
+++ b/docs/_includes/widgets/single_column/cta_3_column.html
@@ -1,32 +1,26 @@
-<div class= "cta-3-column">
-	<div class= "column">
-		<div class= "row">
-			<img class= "image" src= "http://i.ytimg.com/vi/4yikpWtIFU8/maxresdefault.jpg"/>
-			<h2 class= "headline">Headline 1</h2>
-			<p class= "text-content">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
-			</p>
-			<a class= "more-link">See More Information</a>
-		</div>
+<div class="cta-3-column">
+	<div class="column">
+		<a href=""><img class="image" src="http://i.ytimg.com/vi/4yikpWtIFU8/maxresdefault.jpg"/></a>
+		<h2 class="headline">Headline 1</h2>
+		<p class="text-content">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
+		</p>
+		<a class= "more-link">See More Information</a>
 	</div>
-	<div class= "column">
-		<div class= "row">
-			<img class= "image" src= "http://i.ytimg.com/vi/4yikpWtIFU8/maxresdefault.jpg"/>
-			<h2 class= "headline">Headline 2</h2>
-			<p class= "text-content">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
-			</p>
-			<a class= "more-link">See More Information</a>
-		</div>
+	<div class="column">
+		<a href= ""><img class="image" src="http://i.ytimg.com/vi/4yikpWtIFU8/maxresdefault.jpg"/></a>
+		<h2 class ="headline">Headline 2</h2>
+		<p class="text-content">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
+		</p>
+		<a class="more-link">See More Information</a>
 	</div>
-	<div class= "column">
-		<div class= "row">
-			<img class= "image" src= "http://i.ytimg.com/vi/4yikpWtIFU8/maxresdefault.jpg"/>
-			<h2 class= "headline">Headline 3</h2>
-			<p class= "text-content">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
-			</p>
-			<a class= "more-link">See More Information</a>
-		</div>
+	<div class="column">
+		<a href= ""><img class="image" src="http://i.ytimg.com/vi/4yikpWtIFU8/maxresdefault.jpg"/></a>
+		<h2 class="headline">Headline 3</h2>
+		<p class="text-content">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
+		</p>
+		<a class="more-link">See More Information</a>
 	</div>
 </div>
