--- a/src/stylesheets/widgets/single_column/messaging-2-column.scss
+++ b/src/stylesheets/widgets/single_column/messaging-2-column.scss
@@ -4,15 +4,15 @@
 
 	.column {
 		&:first-of-type {
-			@include span-columns(7);
+			@include span-columns(10);
 		}
-		@include span-columns(5);
+		@include span-columns(8);
 
 		@include media($medium-screen-up) {
 			&:first-of-type {
-				@include span-columns(4);
+				@include fill-parent();
 			}
-			@include span-columns(4);
+			@include fill-parent();
 		}
 	}
 
