--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -88,7 +88,7 @@
 @import "widgets/news-events-feed";
 @import "widgets/single_column/messaging-2-column";
 @import "widgets/single_column/cta-3-column";
-
+@import "widgets/single_column/chapman-social-feed";
 
 // Themes
 @import "themes/wilkinson";
