Floated styles for messaging widget

--- a/src/stylesheets/base/variables.scss
+++ b/src/stylesheets/base/variables.scss
@@ -94,3 +94,6 @@ $theatre-secondary: #001f40;
 
 $wilkinson-primary: #008ec1;
 $wilkinson-secondary: #007299;
+
+/* Our Base Spacing Unit: Use multiples of this variable */
+$base-spacing: 16px;
