--- a/docs/_includes/widgets/single_column/messaging_2_column.html
+++ b/docs/_includes/widgets/single_column/messaging_2_column.html
@@ -1,20 +1,21 @@
-<div class="messaging-2-column">
-	<div class="column">
-		<img class="image" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
-	</div>
-	<div class="column">
-		<div class="column-wrap">
-			<h4 class="category">category</h4>
-			<h1 class="title">Sample Message With Photo</h1>
-			<div class="text-wrap">
-				<p class="message-text">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
-				</p>
-				<p>
-					nunc. Curabitur tempus posuere aliquam. Etiam euismod ullamcorper quam ac consequat. Duis varius varius leo non elementum. Duis eget lectus tincidunt elit fermentum dictum vitae vel metus. Proin nec magna fermentum, tincidunt velit id, fringilla lorem. Mauris in dolor risus. Morbi dapibus magna sed mi feugiat, sed tristique sem
-				</p>
+<div class="messaging-2-column left-to-right" style="background-image: url('http://dutchcodingcompany.com/wp-content/themes/tdcc/images/121.jpg')">
+	<div class="outer-container">
+		<div class="row">
+			<div class="column media-column">
+				<img class="image" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
 			</div>
-			<div class="actions"><a class= "button red">This is a button</a></div>
+			<div class="column text-column">
+				<div class="column-wrap">
+					<h4 class="category">category</h4>
+					<h1 class="title">Sample Message With Photo</h1>
+					<div class="text-wrap">
+						<p class="message-text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
+						</p>
+					</div>
+					<div class="actions"><a class= "button red">This is a button</a></div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
