--- a/docs/_includes/widgets/single_column/messaging_2_column.html
+++ b/docs/_includes/widgets/single_column/messaging_2_column.html
@@ -1,4 +1,4 @@
-<div class="messaging-2-column left-to-right" style="backgdround-image: url('http://dutchcodingcompany.com/wp-content/themes/tdcc/images/121.jpg')">
+<div class="messaging-2-column">
 	<div class="outer-container">
 		<div class="column media-column">
 			<img class="image" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
