--- a/src/stylesheets/neat/settings/_grid.scss
+++ b/src/stylesheets/neat/settings/_grid.scss
@@ -5,6 +5,8 @@ $medium-screen: 600px;
 
 $medium-screen-up: new-breakpoint(max-width $medium-screen 4);
 
+$large-screen: 1120px;
+
 /// Sets the relative width of a single grid column. The unit used should be the same one used to define `$gutter`. To learn more about modular-scale() see [Bourbon docs](http://bourbon.io/docs/#modular-scale). Set with a `!global` flag.
 ///
 /// @type Number (Unit)
