--- a/src/stylesheets/widgets/single_column/messaging-2-column.scss
+++ b/src/stylesheets/widgets/single_column/messaging-2-column.scss
@@ -11,7 +11,7 @@
 
 	.media-column {
 		padding: $base-spacing*4 0 0 0;
-
+		white-space: nowrap;
 		@include media($medium-screen) {
 			@include span-columns(8);
 			@include pad($base-spacing*4 default);
@@ -19,7 +19,6 @@
 
 		@include media($large-screen){
 			@include span-columns(10);
-			vertical-align: middle;
 			text-align: center;
 
 		}
@@ -39,8 +38,16 @@
 		}
 	}
 
-	.image {
-		@include fill-parent;
+	.center-media-helper {
+		display: inline-block;
+		height: 100%;
+		vertical-align: middle;
+	}
+
+	.media {
+		vertical-align: middle;
+		width: 100%;
+		height: auto;
 	}
 
 	h1.title {
