--- a/docs/_includes/widgets/single_column/messaging_2_column_with_bg_image.html
+++ b/docs/_includes/widgets/single_column/messaging_2_column_with_bg_image.html
@@ -1,7 +1,7 @@
 <div class="messaging-2-column left-to-right" style="background-image: url('http://dutchcodingcompany.com/wp-content/themes/tdcc/images/121.jpg')">
   <div class="outer-container">
     <div class="column media-column">
-      <img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
+      <span class="center-media-helper"></span><img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
     </div>
     <div class="column text-column">
       <div class="column-wrap">
