--- a/src/stylesheets/widgets/single_column/messaging-2-column.scss
+++ b/src/stylesheets/widgets/single_column/messaging-2-column.scss
@@ -32,6 +32,7 @@
 		}
 
 		@include media($large-screen){
+			@include pad($base-spacing*2 default $base-spacing*4);
 			@include span-columns(7);
 			@include shift(1);
 		}
