--- a/src/stylesheets/widgets/single_column/messaging-2-column.scss
+++ b/src/stylesheets/widgets/single_column/messaging-2-column.scss
@@ -3,6 +3,7 @@
 	background-repeat: no-repeat;
 	background-position: center center;
 	margin: $base-spacing*2 0;
+	background-color: white;
 
 	.outer-container {
 		@include outer-container;
