--- a/src/stylesheets/base/mixins.scss
+++ b/src/stylesheets/base/mixins.scss
@@ -172,3 +172,17 @@
 	margin-top: 14px;
 	line-height: 14px;
 }
+
+@mixin fluid-width-video-container() {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
+
+	& iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100% !important;
+		height: 100% !important;
+	}
+}
