updated styles for cta widget

--- a/src/stylesheets/base/mixins.scss
+++ b/src/stylesheets/base/mixins.scss
@@ -172,3 +172,20 @@
 	margin-top: 14px;
 	line-height: 14px;
 }
+
+@mixin aspect_ratio($width, $height) {
+	position: relative;
+	&:before {
+		display: block;
+		content: "";
+		width: 100%;
+		padding-top: ($height / $width) * 100%;
+	}
+	img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+}
