--- a/src/stylesheets/widgets/single_column/chapman-social-feed.scss
+++ b/src/stylesheets/widgets/single_column/chapman-social-feed.scss
@@ -3,17 +3,12 @@ $tile_width: 335px;
 
 .chapman-social-feed-widget-container {
 	@include outer-container;
-	margin-top: $base-spacing*4;
-	margin-bottom: $base-spacing*4;
-	padding: 0 $base-spacing*2;
+	padding: $base-spacing*4 0;
 	text-align: center;
-
-	@include media($large-screen) {
-		padding: 0;
-	}
 
 	.chapman-social-feed-title {
 		@include main_heading(100);
+		padding: 0 $base-spacing*2;
 		text-transform: none;
 	}
 
