Removed margin, added padding for message and cta widget

--- a/src/stylesheets/neat/settings/_grid.scss
+++ b/src/stylesheets/neat/settings/_grid.scss
@@ -56,3 +56,5 @@ $default-feature: min-width; // Default @media feature for the breakpoint() mixi
 ///@type String
 
 $default-layout-direction: LTR !default;
+
+$widget-padding: 32px !default;
